--- a/latex/citation.bib
+++ b/latex/citation.bib
@@ -49,3 +49,66 @@
 	keywords = {⛔ No DOI found, 65T50, 42A38, Mathematics - Numerical Analysis},
 	annote = {Comment: 18 pages, 2 figures; in press at Appl. Comput. Harmon. Anal.; updated Rmk 4 in light of revised Potts-Tasche preprint},
 }
+
+
+@article{staniforth1991,
+	title = {Semi-{Lagrangian} {Integration} {Schemes} for {Atmospheric} {Models}—{A} {Review}},
+	volume = {119},
+	issn = {1520-0493, 0027-0644},
+	url = {https://journals.ametsoc.org/view/journals/mwre/119/9/1520-0493_1991_119_2206_slisfa_2_0_co_2.xml},
+	doi = {10.1175/1520-0493(1991)119<2206:SLISFA>2.0.CO;2},
+	language = {EN},
+	number = {9},
+	urldate = {2021-11-12},
+	journal = {Monthly Weather Review},
+	author = {Staniforth, Andrew and Côté, Jean},
+	month = sep,
+	year = {1991},
+	note = {Number: 9
+Publisher: American Meteorological Society
+Section: Monthly Weather Review},
+	pages = {2206--2223},
+	file = {StaniforthA_CôtéJ_1991_Semi-Lagrangian_Integration_Schemes_for_Atmospheric_Models—A_Review.pdf:C\:\\Ryan\\Paper_Zotero\\Class\\CompPDEs\\StaniforthA_CôtéJ_1991_Semi-Lagrangian_Integration_Schemes_for_Atmospheric_Models—A_Review.pdf:application/pdf},
+}
+
+
+@article{mcdonald1987,
+	title = {Accuracy of {Multiply}-{Upstream} {Semi}-{Lagrangian} {Advective} {Schemes} {II}},
+	volume = {115},
+	issn = {1520-0493, 0027-0644},
+	url = {https://journals.ametsoc.org/view/journals/mwre/115/7/1520-0493_1987_115_1446_aomusl_2_0_co_2.xml},
+	doi = {10.1175/1520-0493(1987)115<1446:AOMUSL>2.0.CO;2},
+	abstract = {Abstract The degree of accuracy of various multiply-upstream semi-Lagrangian schemes is examined by analyzing the driven one-dimensional advection equation. The relationship between the order of accuracy of a given scheme and the order of the interpolations used, both of find the position of, and the value of the fields at, the departure point is established. In the process, it is shown how to construct a semi-Lagrangian scheme which is accurate to third-order.},
+	language = {EN},
+	number = {7},
+	urldate = {2021-12-12},
+	journal = {Monthly Weather Review},
+	author = {McDonald, A.},
+	month = jul,
+	year = {1987},
+	note = {Publisher: American Meteorological Society
+Section: Monthly Weather Review},
+	pages = {1446--1450},
+	file = {McDonaldA_1987_Accuracy_of_Multiply-Upstream_Semi-Lagrangian_Advective_Schemes_II.pdf:C\:\\Ryan\\Paper_Zotero\\Class\\CompPDEs\\McDonaldA_1987_Accuracy_of_Multiply-Upstream_Semi-Lagrangian_Advective_Schemes_II.pdf:application/pdf;Snapshot:C\:\\Ryan\\Paper_Zotero\\Zotero_Data\\storage\\I6NJXAT6\\1520-0493_1987_115_1446_aomusl_2_0_co_2.html:text/html},
+}
+
+
+@article{mcdonald1999,
+	title = {An {Examination} of {Alternative} {Extrapolations} to {Find} the {Departure} {Point} {Position} in a “{Two}-{Time}-{Level}” {Semi}-{Lagrangian} {Integration}},
+	volume = {127},
+	issn = {1520-0493, 0027-0644},
+	url = {https://journals.ametsoc.org/view/journals/mwre/127/9/1520-0493_1999_127_1985_aeoaet_2.0.co_2.xml},
+	doi = {10.1175/1520-0493(1999)127<1985:AEOAET>2.0.CO;2},
+	abstract = {Abstract An unmeteorological oscillation in the forecast fields produced by a two-time-level semi-Lagrangian and semi-implicit model has been traced to the method used for finding the departure point position. Various alternatives to the traditional method for determining it are examined and tested in a forecast model in order to find the one that removes the unmeteorological oscillation most satisfactorily.},
+	language = {EN},
+	number = {9},
+	urldate = {2021-12-19},
+	journal = {Monthly Weather Review},
+	author = {McDonald, A.},
+	month = sep,
+	year = {1999},
+	note = {Publisher: American Meteorological Society
+Section: Monthly Weather Review},
+	pages = {1985--1993},
+	file = {McDonaldA_1999_An_Examination_of_Alternative_Extrapolations_to_Find_the_Departure_Point.pdf:C\:\\Ryan\\Paper_Zotero\\Class\\CompPDEs\\McDonaldA_1999_An_Examination_of_Alternative_Extrapolations_to_Find_the_Departure_Point2.pdf:application/pdf},
+}
