Updates from Overleaf

--- a/latex/CompPDEs_FinalProj.tex
+++ b/latex/CompPDEs_FinalProj.tex
@@ -306,7 +306,14 @@ We could replace all the interpolation with FINUFFT so that they are spectrally 
 
 \section{Semi-Lagrangian Method for 2D Navier Stokes}\label{sec:nonli_adv}
 
-
+\begin{figure}[H]
+    \centering
+    \includegraphics{figs/nonlin_conv_order_Taylor_Trap}
+    \includegraphics{figs/nonlin_conv_order_Taylor_finu_Trap}
+    \includegraphics{figs/nonlin_conv_order_3Vortices_Trap}
+    \includegraphics{figs/nonlin_conv_order_3Vortices_finu_Trap}
+    \caption{}\label{fig:conv_order_finu_}
+\end{figure}
 
 \section{Semi-Lagrangian Method for 2D Navier Stokes}\label{sec:adv_NS}
 
