--- a/latex/citation.bib
+++ b/latex/citation.bib
@@ -112,3 +112,21 @@ Section: Monthly Weather Review},
 	pages = {1985--1993},
 	file = {McDonaldA_1999_An_Examination_of_Alternative_Extrapolations_to_Find_the_Departure_Point.pdf:C\:\\Ryan\\Paper_Zotero\\Class\\CompPDEs\\McDonaldA_1999_An_Examination_of_Alternative_Extrapolations_to_Find_the_Departure_Point2.pdf:application/pdf},
 }
+
+
+@article{temperton1987,
+	title = {An {Efficient} {Two}-{Time}-{Level} {Semi}-{Lagrangian} {Semi}-{Implicit} {Integration} {Scheme}},
+	volume = {113},
+	issn = {1477-870X},
+	url = {http://onlinelibrary.wiley.com/doi/abs/10.1002/qj.49711347714},
+	doi = {10.1002/qj.49711347714},
+	language = {en},
+	number = {477},
+	urldate = {2021-12-12},
+	journal = {Quarterly Journal of the Royal Meteorological Society},
+	author = {Temperton, Clive and Staniforth, Andrew},
+	year = {1987},
+	note = {\_eprint: https://rmets.onlinelibrary.wiley.com/doi/pdf/10.1002/qj.49711347714},
+	pages = {1025--1039},
+	file = {Snapshot:C\:\\Ryan\\Paper_Zotero\\Zotero_Data\\storage\\XZNTHWP7\\qj.html:text/html;TempertonC_StaniforthA_1987_An_Efficient_Two-Time-Level_Semi-Lagrangian_Semi-Implicit_Integration_Scheme.pdf:C\:\\Ryan\\Paper_Zotero\\Class\\CompPDEs\\TempertonC_StaniforthA_1987_An_Efficient_Two-Time-Level_Semi-Lagrangian_Semi-Implicit_Integration_Scheme.pdf:application/pdf},
+}
